<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:layout_margin="16dp">
    
    <EditText
        android:id="@+id/book_title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/insert_title_txt"
        android:inputType="text"/>

    <EditText
        android:id="@+id/book_author_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_title_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/insert_author_txt"
        android:inputType="text"/>

    <EditText
        android:id="@+id/book_publisher_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_author_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/insert_publisher_txt"
        android:inputType="text"/>

    <EditText
        android:id="@+id/book_isbn_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_publisher_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/insert_isbn_txt"
        android:inputType="text"/>

    <Button
        android:id="@+id/book_search_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/book_isbn_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FFFFFF"
        android:text="@string/search_book_txt"
        />

</android.support.constraint.ConstraintLayout>